hphp/hack/test/ifc/check/calls_static.php.exp
=== IFC analysis results for calls_static.php
File "calls_static.php", line 14, characters 5-29:
Data with policy `PRIVATE` appears in context `PUBLIC`. (Typing[4379])
  File "calls_static.php", line 9, characters 16-23:
  This may be the data source with policy `PRIVATE`
  File "calls_static.php", line 7, characters 16-22:
  This may be the data sink with policy `PUBLIC`
File "calls_static.php", line 22, characters 3-100:
Data with policy `PRIVATE` appears in context `PUBLIC`. (Typing[4379])
  File "calls_static.php", line 9, characters 16-23:
  This may be the data source with policy `PRIVATE`
  File "calls_static.php", line 7, characters 16-22:
  This may be the data sink with policy `PUBLIC`
  File "calls_static.php", line 14, characters 5-29:
  Another program point contributing to the illegal flow
File "calls_static.php", line 17, characters 3-99:
Data with policy `PRIVATE` appears in context `PUBLIC`. (Typing[4379])
  File "calls_static.php", line 9, characters 16-23:
  This may be the data source with policy `PRIVATE`
  File "calls_static.php", line 7, characters 16-22:
  This may be the data sink with policy `PUBLIC`
  File "calls_static.php", line 14, characters 5-29:
  Another program point contributing to the illegal flow
File "calls_static.php", line 42, characters 3-103:
Data with policy `PRIVATE` appears in context `PUBLIC`. (Typing[4379])
  File "calls_static.php", line 9, characters 16-23:
  This may be the data source with policy `PRIVATE`
  File "calls_static.php", line 7, characters 16-22:
  This may be the data sink with policy `PUBLIC`
  File "calls_static.php", line 14, characters 5-29:
  Another program point contributing to the illegal flow
